[package]
name = "pend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = { version = "4.0.29", features = ["derive"] }
schemars = "0.8.11"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
which = "4.3.0"

[build-dependencies]
chrono = "0.4.22"
schemars = "0.8.11"
serde = "1.0.148"
serde_json = "1.0.89"
